--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
+	<!-- animate css -->
+	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<!-- external css -->
@@ -14,12 +16,42 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 	<!-- google-fonts -->
-	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
 	<title></title>
 
 </head>
 	
 <body>
+	<nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+			<a href="#" class="navbar-brand">FAP</a>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			
+			<div id="navbar-nav" class="collapse navbar-collapse">
+				<ul class="navbar-nav ml-auto">
+
+					<li class="nav-item">
+						<a class="nav-link active" href="home.html">Home</a>
+					</li>	
+
+					<li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+					</li>
+
+					<li class="nav-item">
+					<a class="nav-link" href="#">Contact Us</a>
+					</li>
+
+					<li class="nav-item">
+					<a class="nav-link" href="#">Gallery</a>
+					</li>
+				</ul>
+			</div>
+
+		</nav> <!-- end navbar -->
+
 	<div class="container">
 		<div class="jumbotron">
 		  <h1 class="display-5">CAPSTONE-01</h1>
